--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -1,3 +1,22 @@
 .thumbnail-sm {
-  height: 150px;
+  height: 50px;
 }
+
+// styles for Event images model
+  .img-toggle{
+    margin: 0px auto;
+  }
+  .img-toggle:hover {
+    box-shadow: 0px 0px 1px 1px #0288D1 ;
+  }
+
+  @media (min-width: 768px) {
+
+    .modal-dialog {
+      display: table;
+      width: auto;
+      max-width: 1200px;
+      min-width: 50px;
+      margin: 30px auto;
+    }
+  }
