--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -1,9 +1,11 @@
+<!-- Button section -->
 <span class="pull-right">
   <%= link_to "打开前台", event_path(@event), :target => "_blank", :class => "btn btn-primary" %>
   <%= link_to "Edit", edit_admin_event_path(@event), :class => "btn btn-primary" %>
 </span>
 <div class="clearfix"></div>
 
+<!-- Event show page title -->
 <h1 class="text-center">
   <% if @event.logo.present? %>
     <%= link_to image_tag(@event.logo.url(:thumb), :class => "thumbnail", :style => "border-radius: 50%; display: inline; margin: auto; height: 60px; width: 60px;"), @event.logo.url, :target => "_blank" %>
@@ -11,18 +13,45 @@
   <%= @event.name %>
 </h1>
 
-
+<!-- Event Status & Category -->
 <h2><%= t(@event.status, :scope => "event.status") %></h2>
 
 <h2><%= @event.category.try(:name) %></h2>
 
+<!-- Event Images -->
 <h2>Event Images</h2>
 <% if @event.images.present? %>
-  <% @event.images.each do |image| %>   <!-- NOTE image_tag -->
-    <%= link_to image_tag(image.url(:small), :class => "thumbnail thumbnail-sm", :style => "display: inline;"), image.url, :target => "_blank" %>
+
+  <% @event.images.each_with_index do |image, i| %>
+    <!-- Trigger the modal with a button -->
+    <span href="" data-toggle="modal" data-target="#myModal">
+      <%= image_tag(image.url, :class => "img-toggle thumbnail thumbnail-sm", :style => "display: inline; cursor: pointer;") %>
+    </span>
   <% end %>
+
+  <!-- Modal -->
+  <div id="myModal" class="modal fade event-images" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header text-center">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title" style="display: block;"><%= @event.name %></h4>
+        </div>
+        <div class="modal-body">
+          <image id="img-modal" class="image-response" src="" style="width: 100%;" />
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
 <% end %>
 
+<!-- Event Attachment -->
 <h2>Attachments</h2>
 <ul>
   <% @event.attachments.each do |a| %>
@@ -31,4 +60,17 @@
 </ul>
 <hr>
 
+<!-- Event Description -->
 <%= sanitize @event.description %>
+
+<script>
+// js for Event images
+$(document).on("turbolinks:load", function () {
+    $(".img-toggle").on('click', function () {
+        var image = $(this).attr('src');
+        $('#myModal').on('show.bs.modal', function () {
+            $("#img-modal").attr("src", image);
+        });
+    });
+});
+</script>
